<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.cs160.joleary.catnip.CongressionalMain">

    <LinearLayout
        android:id="@+id/location_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/showing"/>

        <TextView
            android:id="@+id/show_location"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:indeterminate="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />



    <TextView
        android:id="@+id/senate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/senate"/>


    <RelativeLayout
        android:id="@+id/senate_1_party"
        android:tag="senate1"
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:clickable="true"
        android:onClick="onClick"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/senate_1_pic"
            android:layout_alignParentLeft="true"
            android:layout_width="100dp"
            android:layout_height="85dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:paddingLeft="20dp"
            android:weightSum="1.0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/senate_1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textSize="8pt"
                android:layout_weight="0.4"
                />

            <TextView
                android:id="@+id/senate_1_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:textSize="5pt"
                android:layout_weight="0.3"/>

            <TextView
                android:id="@+id/senate_1_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="5pt"
                android:layout_weight="0.3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:tag="senate1"
            android:layout_alignParentRight="true"
            android:background="#FFFFFF"
            android:clickable="true"
            android:onClick="twitterOnClick"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/senate_1_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/twitter"/>

            <TextView
                android:id="@+id/senate_1_tweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Tweet!"/>


        </LinearLayout>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/senate_2_party"
        android:tag="senate2"
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:clickable="true"
        android:onClick="onClick"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/senate_2_pic"
            android:layout_alignParentLeft="true"
            android:layout_width="100dp"
            android:layout_height="85dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:paddingLeft="20dp"
            android:weightSum="1.0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/senate_2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textSize="8pt"
                android:layout_weight="0.4"
                />

            <TextView
                android:id="@+id/senate_2_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:textSize="5pt"
                android:layout_weight="0.3"/>

            <TextView
                android:id="@+id/senate_2_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="5pt"
                android:layout_weight="0.3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:tag="senate2"
            android:background="#FFFFFF"
            android:clickable="true"
            android:onClick="twitterOnClick"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/senate_2_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/twitter"/>

            <TextView
                android:id="@+id/senate_2_tweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Tweet!"/>


        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/house"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="8pt"
        android:layout_marginBottom="15dp"
        android:text="@string/house"/>

    <RelativeLayout
        android:id="@+id/house_1_party"
        android:tag="house1"
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:clickable="true"
        android:onClick="onClick"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/house_1_pic"
            android:layout_alignParentLeft="true"
            android:layout_width="100dp"
            android:layout_height="85dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:paddingLeft="20dp"
            android:weightSum="1.0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/house_1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textSize="8pt"
                android:layout_weight="0.4"
                />

            <TextView
                android:id="@+id/house_1_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:textSize="5pt"
                android:layout_weight="0.3"/>

            <TextView
                android:id="@+id/house_1_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="5pt"
                android:layout_weight="0.3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:tag="house1"
            android:layout_alignParentRight="true"
            android:background="#FFFFFF"
            android:clickable="true"
            android:onClick="twitterOnClick"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/house_1_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/twitter"/>

            <TextView
                android:id="@+id/house_1_tweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Tweet!"/>


        </LinearLayout>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/house_2_party"
        android:tag="house2"
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:clickable="true"
        android:onClick="onClick"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/house_2_pic"
            android:layout_alignParentLeft="true"
            android:layout_width="100dp"
            android:layout_height="85dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:paddingLeft="20dp"
            android:weightSum="1.0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/house_2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textSize="8pt"
                android:layout_weight="0.4"
                />

            <TextView
                android:id="@+id/house_2_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:textSize="5pt"
                android:layout_weight="0.3"/>

            <TextView
                android:id="@+id/house_2_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="5pt"
                android:layout_weight="0.3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:tag="house2"
            android:layout_alignParentRight="true"
            android:background="#FFFFFF"
            android:clickable="true"
            android:onClick="twitterOnClick"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/house_2_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/twitter"/>

            <TextView
                android:id="@+id/house_2_tweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Tweet!"/>


        </LinearLayout>


    </RelativeLayout>



</LinearLayout>
<!---->